# myserver

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TodoList.md  package-lock.json  package.json  summary.md
.claude/: settings.local.json
apps/game-proxy/: .env.example  .env.production.example  Cargo.toml  build.rs
apps/game-proxy/src/: admin_server.rs  auth.rs  blocklist.rs  config.rs  connection_limits.rs  local_socket.rs  main.rs  maintenance.rs  metrics.rs  proto.rs  protocol.rs  proxy_server.rs  rollout_drain_status.rs  route_store.rs  session.rs  upstream.rs
apps/game-proxy/src/admin_server/: assertion.rs  audit.rs  auth.rs  http.rs  query.rs  route_handlers.rs  tests.rs
apps/game-proxy/src/admin_server/tests/: auth.rs
apps/game-proxy/src/proto/: myserver.game.rs
apps/game-proxy/src/transport/: kcp_frontend.rs  mod.rs  tcp_frontend.rs
apps/game-server/: .env.example  .env.test.example  Cargo.toml  build.rs
apps/game-server/csv/: BufferBase.csv  CharacterProgressTable.csv  DisciplineTable.csv  ItemTable.csv  SceneContext.csv  SceneInteraction.csv  SceneMonsterSpawn.csv  SceneNpc.csv  ScenePortal.csv  SceneRegion.csv  SceneSpawnPoint.csv  SceneTable.csv  SkillBase.csv  TestTable_100.csv  TestTable_110.csv  TitleTable.csv
apps/game-server/scene/: dungeon_01.grid.json  grassland_01.grid.json
apps/game-server/src/: admin_server.rs  authority_bridge.rs  config.rs  db_store.rs  gm_broadcast.rs  internal_server.rs  kick_subscriber.rs  local_socket.rs  main.rs  match_client.rs  metrics.rs  mysql_store.rs  protocol.rs  room.rs  room_logic.rs  room_manager.rs  server.rs  session.rs  ticket.rs
apps/game-server/src/adapters/persistence/: character_element_repository.rs  mod.rs
apps/game-server/src/admin_server/: assertion.rs  audit.rs  auth.rs  gm.rs  mail_assertion.rs  protocol_io.rs  rollout_status.rs  runtime_config.rs  tests.rs
apps/game-server/src/business/: mod.rs
apps/game-server/src/business/character_element/: MODULE.md  mod.rs
apps/game-server/src/config_table/: mod.rs  registry.rs  reload.rs  runtime.rs  traits.rs
apps/game-server/src/core/: character_discipline.rs  character_element.rs  character_element_effective.rs  character_progress.rs  character_push.rs  character_title.rs  character_title_unlock.rs  context.rs  global_id.rs  mod.rs  online_route.rs  reward_source.rs  room.rs  room_logic.rs  room_manager.rs  room_policy.rs
apps/game-server/src/core/config_table/: mod.rs  parser.rs  reload.rs  runtime.rs  traits.rs
apps/game-server/src/core/inventory/: asset.rs  attr.rs  buff.rs  compatibility.rs  container.rs  contract.rs  equipment.rs  item.rs  mod.rs  player_data.rs  reward_delivery.rs  visual.rs
apps/game-server/src/core/logic/: factory.rs  mod.rs  room_logic.rs
apps/game-server/src/core/player/: db_player_store.rs  grant_contract.rs  mod.rs  mysql_player_store.rs  player_manager.rs
apps/game-server/src/core/room/: mod.rs
apps/game-server/src/core/runtime/: mod.rs  room_manager.rs  room_policy.rs
apps/game-server/src/core/service/: character_element_service.rs  character_progress_service.rs  character_title_service.rs  core_service.rs  inventory_service.rs  mod.rs  room_service.rs
apps/game-server/src/core/system/: mod.rs
apps/game-server/src/csv_code/: bufferbase.rs  characterprogresstable.rs  disciplinetable.rs  itemtable.rs  mod.rs  scenecontext.rs  sceneinteraction.rs  scenemonsterspawn.rs  scenenpc.rs  sceneportal.rs  sceneregion.rs  scenespawnpoint.rs  scenetable.rs  skillbase.rs  testtable_100.rs  testtable_110.rs  titletable.rs
apps/game-server/src/gameconfig/: character_progress_config.rs  discipline_config.rs  mod.rs  registry.rs  title_config.rs
apps/game-server/src/gameroom/: factory.rs  mod.rs
apps/game-server/src/gameroom/combat_demo/: mod.rs
apps/game-server/src/gameroom/disposable_match/: mod.rs
apps/game-server/src/gameroom/lockstep_sim_demo/: mod.rs
apps/game-server/src/gameroom/movement_demo/: mod.rs
apps/game-server/src/gameroom/persistent_world/: mod.rs
apps/game-server/src/gameroom/robot_sync_room/: mod.rs
apps/game-server/src/gameroom/sandbox/: mod.rs
apps/game-server/src/gameservice/: mod.rs
apps/game-server/src/proto/: mod.rs  myserver.admin.rs  myserver.game.rs
apps/game-server/src/protocol/: message_type.rs  mod.rs
apps/game-server/tools/: csv_codegen.rs
apps/match-service/: .env.example  Cargo.toml  build.rs
apps/match-service/examples/: match_flow_probe.rs
apps/match-service/src/: config.rs  error.rs  game_server_client.rs  main.rs  metrics.rs  runtime_store.rs  server.rs
apps/match-service/src/matcher/: mod.rs  simple_matcher.rs
apps/match-service/src/pool/: candidate.rs  match_pool.rs  mod.rs
apps/match-service/src/proto/: mod.rs  myserver.admin.rs  myserver.game.rs  myserver.matchservice.rs  myserver.r#match.rs
apps/match-service/src/service/: match_service.rs  mod.rs
apps/match-service/src/state/: mod.rs  player_state.rs
apps/myforge-agent/: .env.example  Cargo.toml
apps/myforge-agent/src/: app.rs  command.rs  config.rs  error.rs  execution.rs  keys.rs  lib.rs  logging.rs  main.rs  preflight.rs  protocol.rs  runtime.rs  schemas.rs  state.rs
apps/myforge-agent/tests/: websocket_runtime.rs
(+771 files in other folders)
