[package]
name = "game-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
interprocess = { version = "2.4", features = ["tokio"] }
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
service-registry = { path = "../../packages/service-registry" }
tokio = { version = "1", features = ["full"] }
tokio_kcp = "0.9.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
