[package]
name = "match-service"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
prost-build = "=0.13.5"
protoc-bin-vendored = "=3.2.0"
tonic-build = "=0.12.3"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
async-stream = "0.3"
futures-core = "0.3"
async-trait = "0.1"
interprocess = { version = "2.4", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-redis = "0.17"
service-registry = { path = "../../packages/service-registry" }
global-id = { path = "../../packages/global-id", features = ["redis"] }
redis = { version = "0.32", features = ["tokio-comp"] }
async-nats = { version = "0.48.0", default-features = false }
