[package]
name = "myforge-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
ed25519-dalek = { version = "2.2", features = ["pem", "pkcs8"] }
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
zeroize = "1"

[dev-dependencies]
pkcs8 = { version = "0.10", features = ["pem"] }
tempfile = "3"
