[package]
name = "myforge-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
command-group = { version = "5.0.1", features = ["with-tokio"] }
dotenvy = "0.15"
ed25519-dalek = { version = "2.2", features = ["pem", "pkcs8"] }
futures-util = "0.3"
hostname = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "test-util", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
pkcs8 = { version = "0.10", features = ["pem"] }
tempfile = "3"

[target.'cfg(windows)'.dev-dependencies]
junction = { version = "2.0", default-features = false }
